Updates mailing list.

--- a/templates/conditions/index.html
+++ b/templates/conditions/index.html
@@ -12,6 +12,31 @@
 
             </div>
         </div>
+	<div class="row-fluid">
+	  <div class="span2">&nbsp;</div>
+	  <div class="span10">
+
+<!-- Begin MailChimp Signup Form -->
+<link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+  #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="http://clindesk.us5.list-manage2.com/subscribe/post?u=b6cec37bff09d081f3eee6c75&amp;id=b4d36636c9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+  <label for="mce-EMAIL">Updates mailing list</label>
+  <h4>We're growing! We plan on adding many topics here over the next few weeks.</h4>
+  <h4>If you'd like to be notified when we release new topics, enter your address:</h4>
+  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+
+	  </div>
+	</div>
     </div>
 </section>
 
