No link to these disabled things.

--- a/templates/elements/all_conditions.html
+++ b/templates/elements/all_conditions.html
@@ -27,7 +27,7 @@
                                 Leukemias,
                                 Lymphomas,
                                 Benign Bone Marrow Disorders</p>
-                            <p><a href="/conditions/" class="btn btn-info disabled">Coming Soon</a></p>
+                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
                 </li>
@@ -41,7 +41,7 @@
                             Diagnostics and Blood Tests,
                             Coronary Circulation Conditions,
                             Cardiac Arrest</p>
-                            <p><a href="/conditions/" class="btn btn-info disabled">Coming Soon</a></p>
+                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
                 </li>
@@ -55,7 +55,7 @@
                             Pulmonary Circulation Conditions
                             Restrictive and Interstitial Diseases
                             Congenital Disorders</p>
-                            <p><a href="/conditions/" class="btn btn-info disabled">Coming Soon</a></p>
+                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
                 </li>
