--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,16 @@
     <meta name="description" content="{% block description %}{% endblock %}" />
     <meta name="author" content="{% block author %}{% endblock %}" />
     <!-- CSS styles -->
-    <link href="{{ static('css/mentor.min.css') }}" rel="stylesheet"/>
+
+    <link href="{{ static('css/prettify.css') }}" rel="stylesheet" />
+    <link href="{{ static('css/bootstrap.css') }}" rel="stylesheet" />
+    <link href="{{ static('css/bootstrap-responsive.css') }}" rel="stylesheet" />
+    <link href="{{ static('css/menu_layout.css') }}" rel="stylesheet" />
+    <link href="{{ static('css/menu_skin.css') }}" rel="stylesheet" />
+    <link href="{{ static('css/styles.css') }}" rel="stylesheet" />
+    <link href="{{ static('css/slider_ui.css') }}" rel="stylesheet"/>
+
+{#    <link href="{{ static('css/mentor.min.css') }}" rel="stylesheet"/> #}
     <link href="{{ static('css/skin_blue.css') }}" rel="stylesheet"/>
     <!-- http://remysharp.com/2009/01/07/html5-enabling-script/ -->
     <!--[if lt IE 9]>
