Async bootstrap js.

--- a/templates/base.html
+++ b/templates/base.html
@@ -214,8 +214,8 @@
 <a href="#top" id="peBackToTop" class="label btt disabled"><span class="icon-chevron-up icon-white"></span></a>
 #}
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="{{ static('js/bootstrap/204.min.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/min.cd.js') }}" async></script>
+<script type="text/javascript" src="{{ static('js/bootstrap/204.min.js') }}" async></script>
 {# TODO: Can't JS set the cookie? Why not use JS instead of Flask? #}
 </body>
 </html>
