testing with @dgermain

--- a/templates/elements/all_conditions.html
+++ b/templates/elements/all_conditions.html
@@ -23,9 +23,9 @@
                         <div class="caption" style="text-align: center">
                             <h5>Blood, Bone Marrow, Lymphatics</h5>
                             <p>Red Blood Cell Conditions,
-                                Clotting and Coagulation Disorders,
-                                Leukemias,
-                                Lymphomas,
+                                Clotting and Coagulation,
+                                Leukemias,<br/>
+                                Lymphomas,<br/>
                                 Benign Bone Marrow Disorders</p>
                             <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
