--- a/templates/elements/all_conditions.html
+++ b/templates/elements/all_conditions.html
@@ -64,4 +64,72 @@
         </div>
     </div>
 </div>
+
+{#row 2#}
+
+<div class="row-fluid">
+    <div class="span12">
+        <div class="row-fluid">
+            <ul class="thumbnails">
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Digestion &amp; Gastrointestinal</h5>
+                            <p>Stomach Ulcers,
+                            Acid Reflux,
+                            Irritable Bowel Syndrome,<br/>
+                            Celiac Disease (Gluten Intolerance),<br/>
+                            Colon Cancer</p>
+                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
+                        </div>
+                    </div>
+                </li>
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Brain and Nervous System</h5>
+                            <p>Headaches,
+                                Alzheimers, <br/>
+                                Brain Tumors,<br/>
+                                Stroke, Bleeding, <br/>
+								Degenerative Disc Disease,
+                                Meningitis</p>
+                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
+                        </div>
+                    </div>
+                </li>
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Kidneys and Urinary System</h5>
+                            <p>Chronic Kidney Disease,
+                            Acute Renal Failure,
+                            Diabetic Nephropathy,
+                            Urinary Incontinence,
+                            Hypertension and the Kidney</p>
+                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
+                        </div>
+                    </div>
+                </li>
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Obstetrics and Gynecology</h5>
+                            <p>Preeclampsia, Breast Cancer,
+                            Cervical Cancer, </br>endometrial cancer,</br>
+                            Uterine Fibroids, Menopause</br>
+                            Polycystic Ovarian Syndrome</p>
+                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <div class="divider dotted clearfix"><span></span></div>
+        </div>
+    </div>
+</div>
 {# For now, one row of diseases. Copy & clone the above when we're ready. #}
