--- a/templates/diagnostics/index.html
+++ b/templates/diagnostics/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Special Topics{% endblock %}
-{% block tagline_text %}Special Topics{% endblock %}
+{% block title %}Diagnostics{% endblock %}
+{% block tagline_text %}Diagnostics{% endblock %}
 {% block maincontent %}
 <!--main content-->
 <section class="mainContentWrap">
@@ -9,7 +9,6 @@
       <div class="span9">
         <div class="row-fluid">
           <div class="innerSpacer">
-
 
             <!--404 error-->
             <div class="row-fluid">
