Update header url too.

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
                             <li><a href="search.html"><i class="icon-question-sign icon-white"></i> &nbsp;Search</a></li>
                         </ul> #}
                     </li>
-                    <li><a href="/special-topics/">Special Topics</a></li>
+                    <li><a href="/special-topics.html">Special Topics</a></li>
                     <li><a href="/donate.html">Support Us</a>
                     </li>
                     <li><a href="/help.html">Help &amp; FAQ</a>
@@ -196,7 +196,7 @@
                 <div class="span7 footNav">
                     <a class="first" href="/index.html">Home</a><span>&#124;</span>
                     <a href="/conditions/">Conditions</a><span>&#124;</span>
-                    <a href="/special-topics/">Special Topics</a><span>&#124;</span>
+                    <a href="/special-topics.html">Special Topics</a><span>&#124;</span>
                     <a href="/donate.html">Donate</a><span>&#124;</span>
                     <a href="/help.html">Help &amp; FAQ</a><span>&#124;</span>
                     <a href="/about.html">About</a>
