--- a/templates/elements/all_conditions.html
+++ b/templates/elements/all_conditions.html
@@ -13,7 +13,7 @@
                             Diabetes,<br/>
                             Lipid Disorders,<br/>
                             Vitamins and Nutrition, Genetic Disorders (MEN I and II)</p>
-                            <p><a href="/conditions/" class="btn btn-primary">Learn More</a></p>
+                            <p><a href="/conditions/metabolism-and-endocrine/" class="btn btn-primary">Learn More</a></p>
                         </div>
                     </div>
                 </li>
