Tiny header tweaks.

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                 <span class="btnTitle">Menu</span>
                 <span class="icon-chevron-down icon-white"></span>
             </a>
-            <a class="brand" href="index.html" title="Home"><img src="{{ static('img/content/logo.png') }}" alt="mentor" /></a>
+            <a class="brand" href="index.html" title="Home"><img src="{{ static('img/content/logo.png') }}" alt="ClinDesk, Inc." /></a>
             <div class="nav-collapse">
 
                 <div class="smedia widget widget_search">
@@ -49,8 +49,9 @@
                 <!--main nav-->
                 <ul class="nav">
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/conditions/">Conditions</a>
-                        {#		<ul class="dropdown-menu">
+                    <li><a href="/conditions/">Conditions</a></li>
+                    <li class="dropdown"><a href="/special-topics.html">More<b class="caret"></b></a>
+                      <ul class="dropdown-menu">
                             <li><a href="full_width.html"><i class="icon-th icon-white"></i> &nbsp;<b>View All Topics</b></a></li>
                             <li class="divider"></li>
                             <li><a href="full_width.html">Heart &amp; Vascular <span class="badge badge-warning">New!</span></a></li>
@@ -61,13 +62,10 @@
                             <li><a href="sidebar_left.html">Digestive and Gastrointestinal</a></li>
                             <li class="divider"></li>
                             <li><a href="search.html"><i class="icon-question-sign icon-white"></i> &nbsp;Search</a></li>
-                        </ul> #}
+                        </ul>
                     </li>
-                    <li><a href="/special-topics.html">Special Topics</a></li>
-                    <li><a href="/donate.html">Support Us</a>
-                    </li>
-                    <li><a href="/help.html">Help &amp; FAQ</a>
-                    </li>
+                    <li><a href="/donate.html">Support Us</a></li>
+                    <li><a href="/help.html">Help &amp; FAQ</a></li>
                     <li class="last"><a href="/about.html">About</a></li>
                 </ul>
                 <!--end main nav-->
