Stylize submit button.

--- a/templates/conditions/index.html
+++ b/templates/conditions/index.html
@@ -23,7 +23,7 @@
   <h4>We're growing! We plan on adding many topics here over the next few weeks.</h4>
   <h4>If you'd like to be notified when we release new topics, enter your address:</h4>
   <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info"></div>
 </form>
 </div>
 <!--End mc_embed_signup-->
