--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
     </div>
 </header>
 <!-- The tagline is the huge grey banner, right under the navbar. //-->
-<section class="taglineWrap">
+<section class="taglineWrap subnav">
     <div class="container">
         <div class="row-fluid  tagline">
             <div class="span8"><h2>{% block tagline_text %}overwrite this tagline_text block{% endblock %}</h2></div>
