Clean up the header a little.

--- a/s/css/_core.css
+++ b/s/css/_core.css
@@ -5834,6 +5834,7 @@ a.badge:hover {
     top: 40px;
     left: 0;
     right: 0;
+    z-index: 1000; // On top of everything.
 }
 
 .dropdown .caret{
@@ -6520,41 +6521,6 @@ Dark grey (drops bg)                                        #393939
 
 /* Generic Styles */
 
-body
-{
-    background: #fcfcfc;
-    font-family:helvetica, arial, verdana, sans-serif;
-    color:#888;
-    font-size:12px;
-}
-
-h1
-{
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    color:#2f2f2f;
-    font-size:24px;
-    margin-bottom:20px;
-    line-height:30px;
-}
-
-h2
-{
-    font-size:22px;
-    color:#5f5f5f;
-    line-height:28px;
-    font-family:Georgia, Constantia, Lucida, serif;
-
-    font-weight:normal;
-}
-
-h3
-{
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    color:#2f2f2f;
-    font-size:18px;
-    margin-bottom:10px;
-    line-height:24px;
-}
 
 h4
 {
@@ -9171,6 +9137,7 @@ h1
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     color:#2f2f2f;
     font-size:24px;
+    margin-bottom:20px;
     line-height:30px;
 }
 
@@ -9178,7 +9145,7 @@ h2
 {
     font-size:22px;
     color:#444;
-    line-height:28px;
+    line-height:20px;
     font-family:Georgia, Constantia, Lucida, serif;
     font-weight:normal;
 }
@@ -9188,6 +9155,7 @@ h3
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     color:#2f2f2f;
     font-size:18px;
+    margin-bottom:10px;
     line-height:24px;
 }
 
