Update CSS paths for easier editing.

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,12 +16,12 @@
     <link href="{{ static('css/min.cd.css') }}" rel="stylesheet" />
     {% else %}
     <!--- Warning: This currently only loads ClinDesk styles, no WCA //-->
-    <link href="{{ static('css/bootstrap.css') }}" rel="stylesheet" />
-    <link href="{{ static('css/bootstrap-responsive.css') }}" rel="stylesheet" />
-    <link href="{{ static('css/menu_layout.css') }}" rel="stylesheet" />
-    <link href="{{ static('css/menu_skin.css') }}" rel="stylesheet" />
-    <link href="{{ static('css/styles.css') }}" rel="stylesheet" />
-    <link href="{{ static('css/skin_blue.css') }}" rel="stylesheet"/>
+    <link href="{{ static('css/_bootstrap.css') }}" rel="stylesheet" />
+    <link href="{{ static('css/_bootstrap-responsive.css') }}" rel="stylesheet" />
+    <link href="{{ static('css/_menu_layout.css') }}" rel="stylesheet" />
+    <link href="{{ static('css/_menu_skin.css') }}" rel="stylesheet" />
+    <link href="{{ static('css/_styles.css') }}" rel="stylesheet" />
+    <link href="{{ static('css/_skin_blue.css') }}" rel="stylesheet"/>
     {% endif %}
     <!--[if lt IE 9]><script type="text/javascript" src="{{ static('js/html5shiv/36.js') }}"></script><![endif]-->
     <script type="text/javascript">(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
