Explicit image height in HTML, I guess.

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                 <span class="btnTitle">Menu</span>
                 <span class="icon-chevron-down icon-white"></span>
             </a>
-            <a class="brand" href="index.html" title="Home"><img src="{{ static('img/content/logo.png') }}" alt="ClinDesk, Inc." /></a>
+            <a class="brand" href="index.html" title="Home"><img src="{{ static('img/content/logo.png') }}" height="100" alt="ClinDesk, Inc." /></a>
             <div class="nav-collapse">
                 <div class="smedia widget widget_search">
                     <form class="form-inline" action="/search.html" id="searchform" role="search">
