--- a/s/css/_styles.css
+++ b/s/css/_styles.css
@@ -416,19 +416,9 @@ header .nav-collapse ul.nav{
 /*header*/
 header .smedia{
     position:absolute;
-    margin-left:5px;
-    top:25px;;
+    top:10px;
     right:0;
 }
-
-header .smedia span{
-    float:left;
-    margin-top:5px;
-    margin-right:10px;
-    color:#aaa;
-    font-size:12px;
-}
-
 
 .sliderWrap{
     padding-top:40px;
