Closer to a fixed navbar. This totally breaks resizing, sadly.

--- a/s/css/_skin_blue.css
+++ b/s/css/_skin_blue.css
@@ -3,6 +3,14 @@
 
 /* Generic Styles */
 
+.scroll-logo {
+        background:url(../img/content/logo_sml.png) no-repeat;
+	height: 30px;
+	width: 140px;
+	position:fixed;
+	top:5px;
+}
+
 body
 {
     background: #fcfcfc;
