Hide menu for now.

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                 <!--main nav-->
                 <ul class="nav">
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/conditions/">Conditions</a></li>
+                    <li><a href="/conditions/">Conditions</a></li> {#
                     <li class="dropdown"><a href="/special-topics.html">More<b class="caret"></b></a>
                       <ul class="dropdown-menu">
                             <li><a href="full_width.html"><i class="icon-th icon-white"></i> &nbsp;<b>View All Topics</b></a></li>
@@ -64,7 +64,7 @@
                             <li class="divider"></li>
                             <li><a href="search.html"><i class="icon-question-sign icon-white"></i> &nbsp;Search</a></li>
                         </ul>
-                    </li>
+                    </li> #}
                     <li><a href="/donate.html">Support Us</a></li>
                     <li><a href="/help.html">Help &amp; FAQ</a></li>
                     <li class="last"><a href="/about.html">About</a></li>
