Add real disease level pages & set up templates.

--- a/templates/conditions/metabolism-and-endocrine/index.html
+++ b/templates/conditions/metabolism-and-endocrine/index.html
@@ -1,34 +1,3 @@
-{% extends "base.html" %}
+{% extends "conditions/_topic_page.html" %}
 {% block title %}Metabolism and Endocrine{% endblock %}
 {% block tagline_text %}Metabolism and Endocrine{% endblock %}
-{% block maincontent %}
-<!--main content-->
-<section class="mainContentWrap">
-  <div class="container mainContent">
-    <div class="row-fluid">
-      <div class="span9">
-        <div class="row-fluid">
-          <div class="innerSpacer">
-
-            <div class="row-fluid">
-              <div class="span12">
-		<h1>Coming Soon Metab</h1>
-              </div>
-            </div>
-
-
-
-          </div>
-        </div>
-      </div>
-
-
-
-
-
-
-    </div>
-  </div>
-</section>
-
-{% endblock %}
