Move included _all_conditions to prefix underscore.

--- a/templates/conditions/index.html
+++ b/templates/conditions/index.html
@@ -8,7 +8,7 @@
         <div class="row-fluid">
             <div class="span12">
 
-{% include 'elements/all_conditions.html' %}
+{% include '_all_conditions.html' %}
 
             </div>
         </div>
