--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </div>
-{% include 'elements/all_conditions.html' %}
+{% include '_all_conditions.html' %}
     </div>
 </section>
 {% endblock %}
