--- a/templates/conditions/_topic_page.html
+++ b/templates/conditions/_topic_page.html
@@ -46,7 +46,7 @@
 
             </div>
         </div>
-{% include 'elements/all_conditions.html' %}
+{% include '_all_conditions.html' %}
 
   </div>
 </section>
