--- a/templates/conditions/metabolism-and-endocrine/index.html
+++ b/templates/conditions/metabolism-and-endocrine/index.html
@@ -1,3 +1,8 @@
 {% extends "conditions/_topic_page.html" %}
 {% block title %}Metabolism and Endocrine{% endblock %}
 {% block tagline_text %}Metabolism and Endocrine{% endblock %}
+{% block video_source %}5vfdIE-eMig{% endblock %}
+{% block author_name %}Nick Semenkovich{% endblock %}
+{% block author_image %}{{ static('img/heads/semenko.jpg') }}{% endblock %}
+{% block welcome_text %}Welcome to the endo topic, etc.{% endblock %}
+{% block all_conditions %}{% include 'conditions/metabolism-and-endocrine/_all.html' %}{% endblock %}
