Rename more sensically.

--- a/templates/conditions/metabolism-and-endocrine/index.html
+++ b/templates/conditions/metabolism-and-endocrine/index.html
@@ -1,4 +1,4 @@
-{% extends "conditions/_topic_page.html" %}
+{% extends "conditions/_all_topics_page.html" %}
 {% block title %}Metabolism and Endocrine{% endblock %}
 {% block tagline_text %}Metabolism and Endocrine{% endblock %}
 {% block video_source %}5vfdIE-eMig{% endblock %}
