Add disclaimer & cleanup.

--- a/templates/conditions/_condition_page.html
+++ b/templates/conditions/_condition_page.html
@@ -9,15 +9,7 @@
         <div class="row-fluid">
           <div class="innerSpacer">
 
-            <!--body search widget for mobile-->
-            <div class="row-fluid body-search">
-              <div class="span12 widget_search">
-                <form class="form-inline" action="#" method="get" role="search">
-                    <input type="text" class="input-medium span3"  placeholder="Search...">
-                    <button class="icon-search" type="submit"></button>
-                </form>
-              </div>
-            </div>
+{% include "_disclaimer.html" %}
 
             <div class="row-fluid pageTitle">
               <div class="span12"><h1>The Mentor Blog</h1></div>
@@ -258,13 +250,6 @@
             </div>
             <!--end post-->
 
-
-
-
-
-
-
-
             <!--post-->
             <div class="row-fluid">
               <div class="span12 post">
@@ -433,46 +418,11 @@
             <!--end post-->
 
 
-
-
-
-
-            <!--pagination-->
-            <div class="row-fluid post-pagination">
-              <div class="span10 pe-offset2">
-
-                <div class="pagination">
-                  <ul>
-                  <li class="disabled"><a href="#">Prev</a></li>
-                  <li class="active"><a href="#">1</a></li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
-                  <li><a href="#">Next</a></li>
-                  </ul>
-                </div>
-
-              </div>
-            </div>
-            <!--end pagination-->
-
-
-
           </div>
         </div>
       </div>
 
       <aside class="span3 sidebar">
-
-        <!--search widget-->
-
-        <div class="widget widget_search">
-          <form class="form-inline" action="#" id="searchform" method="get" role="search">
-              <input type="text" class="input-medium span3"  placeholder="Search...">
-              <button class="icon-search" type="submit"></button>
-          </form>
-        </div>
-
 
         <!--tabs widget-->
 
@@ -540,30 +490,6 @@
             </li>
           </ul>
         </div>
-
-
-
-        <!--twitter widget-->
-
-        <div class="widget widget_twitter">
-          <h3>Twitter Widget <a class="followBtn" href="https://twitter.com/#!/pixelentity"><span class="label">follow</span></a></h3>
-          <div class="twitter" data-topdate="false" data-count="2" data-username="pixelentity">
-
-          </div>
-        </div>
-
-
-        <!--social media widget-->
-
-        <div class="widget widget_social">
-          <h3>Social Media Widget</h3>
-          <a href="#" data-rel="tooltip" title="Pinterest" class="sm-icon sm-icon-pinterest"></a>
-          <a href="#" data-rel="tooltip" title="Dribbble" class="sm-icon sm-icon-dribbble"></a>
-          <a href="#" data-rel="tooltip" title="Skype" class="sm-icon sm-icon-skype"></a>
-          <a href="#" data-rel="tooltip" title="facebook" class="sm-icon sm-icon-facebook"></a>
-          <a href="#" data-rel="tooltip" title="Vimeo" class="sm-icon sm-icon-vimeo"></a>
-        </div>
-
 
 
 
